--- a/zhongkaotime.html
+++ b/zhongkaotime.html
@@ -31,7 +31,7 @@
             overflow: hidden;
             text-align: center;
             font-family: Arial, sans-serif;
-            background-image: url('https://bing.shangzhenyang.com/api/1080p');
+            background-image: url('https://bing.shangzhenyang.com/api/4k');
         }
 
         .countdown-title {
