--- a/zhongkaotime.html
+++ b/zhongkaotime.html
@@ -17,6 +17,20 @@
             transition: .25s
         }
 
+        #bgBox {
+            display: none;
+            opacity: 0;
+            z-index: -3;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: opacity 1s, transform .25s, filter .25s;
+            backface-visibility: hidden
+        }
+
         body {
             max-width: 100%;
             overflow: hidden;
@@ -26,12 +40,7 @@
             cursor: default;
             -webkit-tap-highlight-color: transparent;
             -webkit-user-select: none;
-            user-select: none;
-            margin: 0;
-            overflow: hidden;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-image: url('https://bing.shangzhenyang.com/api/4k');
+            user-select: none
         }
 
         .countdown-title {
@@ -79,8 +88,8 @@
     </style>
 </head>
 
-<body style="background-size:100%;background-attachment: fixed;">
-
+<body>
+    <img id="bgBox" alt="" src="https://bing.shangzhenyang.com/api/4k" style="display: block; opacity: 1;" class="">
     <div class="cover" id="cover" style="opacity: 1;"></div>
     <div id="title1" class="countdown-title">
         <div id="bb" class="countdown-tbox">
