--- a/zhongkaotime.html
+++ b/zhongkaotime.html
@@ -13,7 +13,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-image: radial-gradient(rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .5) 100%), radial-gradient(rgba(0, 0, 0, 0) 33%, rgba(0, 0, 0, .3) 166%);
+            background-image: radial-gradient(rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .2) 0), radial-gradient(rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .2) 0);
             transition: .25s
         }
 
