--- a/zhongkaotime.html
+++ b/zhongkaotime.html
@@ -150,11 +150,11 @@
                 '<div class="countdown-box"><h1>Days</h1><span>' + days2 + '</span></div>'
             if (distance < 0) {
                 clearInterval(countdownFunction);
-                document.getElementById("countdown").innerHTML = "2024.6.12  Today!";
+                document.getElementById("countdown").innerHTML = "已抵达 2024.6.12 中考";
             }
             if (distance1 < 0) {
                 clearInterval(countdownFunction);
-                document.getElementById("countdown1").innerHTML = "2024.4.20 Today!";
+                document.getElementById("countdown1").innerHTML = "已抵达 2024 体考";
             }
             if (distance2 < 0) {
                 clearInterval(countdownFunction);
