--- a/zhongkaotime.html
+++ b/zhongkaotime.html
@@ -4,88 +4,7 @@
 <head>
     <title>Count</title>
     <meta charset="UTF-8">
-    <style>
-        .cover {
-            z-index: -1;
-            opacity: 0;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-image: radial-gradient(rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .5) 100%), radial-gradient(rgba(0, 0, 0, 0) 33%, rgba(0, 0, 0, .3) 166%);
-            transition: .25s
-        }
-
-        #bgBox {
-            display: none;
-            opacity: 0;
-            z-index: -3;
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: opacity 1s, transform .25s, filter .25s;
-            backface-visibility: hidden
-        }
-
-        body {
-            max-width: 100%;
-            overflow: hidden;
-            margin: 0;
-            font-family: var(--fonts);
-            background-color: #333;
-            cursor: default;
-            -webkit-tap-highlight-color: transparent;
-            -webkit-user-select: none;
-            user-select: none
-        }
-
-        .countdown-title {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .countdown-tbox {
-            color: #fff;
-            font-family: -apple-system, BlinkMacSystemFont;
-            text-align: center;
-            padding: 5px;
-            text-shadow: 0 0 20px rgba(0, 0, 0, .50);
-        }
-
-        .countdown-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px;
-        }
-
-        .countdown-box {
-            text-align: center;
-            margin: 0 20px;
-            padding: 10px;
-
-        }
-
-        .countdown-box h1 {
-            margin-bottom: 30px;
-            color: #fff;
-            font-family: -apple-system, BlinkMacSystemFont;
-            text-shadow: 0 0 20px rgba(0, 0, 0, .50);
-            font-size: 1.5em;
-        }
-
-        .countdown-box span {
-            color: #fff;
-            font-family: -apple-s ystem, BlinkMacSystemFont;
-            display: block;
-            font-size: 2.5em;
-            text-shadow: 0 0 20px rgba(0, 0, 0, .50);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
