update the name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Count</title>
+    <title>ZhongkaoCount</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css" />
 </head>
