--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img id="bgBox" alt="" src="https://bing.shangzhenyang.com/api/4k" style="display: block; opacity: 1;" class="">
+    <img id="bgBox" alt="" src="bg2.jpg" style="display: block; opacity: 1;" class="">
     <div class="cover" id="cover" style="opacity: 1;"></div>
     <div id="title1" class="countdown-title">
         <div id="bb" class="countdown-tbox">
