--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img id="bgBox" alt="" src="bg2.jpg" style="display: block; opacity: 1;" class="">
+    <img id="bgBox" alt="" src="https://bing.shangzhenyang.com/api/4k" style="display: block; opacity: 1;" class="">
     <div class="cover" id="cover" style="opacity: 1;"></div>
     <div id="title1" class="countdown-title">
         <div id="bb" class="countdown-tbox">
@@ -16,12 +16,12 @@
         </div>
     </div>
     <div id="countdown" class="countdown-container"></div>
-    <!-- <div id="title1" class="countdown-title">
+    <<div id="title1" class="countdown-title">
         <div id="bb" class="countdown-tbox">
             <h1>距离 2024.4.11 体考还有</h1>
         </div>
     </div>
-    <div id="countdown1" class="countdown-container"></div> -->
+    <div id="countdown1" class="countdown-container"></div>
   
     <div id="title2" class="countdown-title">
         <div id="bb2" class="countdown-tbox">
@@ -62,15 +62,15 @@
                     '<div class="countdown-box"><h1>Minutes</h1><span>' + minutes + '</span></div>' +
                     '<div class="countdown-box"><h1>Seconds</h1><span>' + seconds + '</span></div>';
             }
-            // if (distance_1 < 0) {
-            //     document.getElementById("countdown1").innerHTML = '<div class="countdown-box"><h1>已抵达 2024 体考!</h1></div>';
-            // } else {
-            //     document.getElementById("countdown1").innerHTML =
-            //         '<div class="countdown-box"><h1>Days</h1><span>' + days1 + '</span></div>' +
-            //         '<div class="countdown-box"><h1>Hours</h1><span>' + hours1 + '</span></div>' +
-            //         '<div class="countdown-box"><h1>Minutes</h1><span>' + minutes1 + '</span></div>' +
-            //         '<div class="countdown-box"><h1>Seconds</h1><span>' + seconds1 + '</span></div>';
-            // }
+            if (distance_1 < 0) {
+                document.getElementById("countdown1").innerHTML = '<div class="countdown-box"><h1>已抵达 2024 体考!</h1></div>';
+            } else {
+                document.getElementById("countdown1").innerHTML =
+                    '<div class="countdown-box"><h1>Days</h1><span>' + days1 + '</span></div>' +
+                    '<div class="countdown-box"><h1>Hours</h1><span>' + hours1 + '</span></div>' +
+                    '<div class="countdown-box"><h1>Minutes</h1><span>' + minutes1 + '</span></div>' +
+                    '<div class="countdown-box"><h1>Seconds</h1><span>' + seconds1 + '</span></div>';
+            }
             if (distance2 < 0) {
                 document.getElementById("countdown2").innerHTML = '<div class="countdown-box"><h1>已抵达 2024 巴南区指标到校!</h1></div>';
             } else {
