--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
             document.getElementById("weekcount").innerHTML =
                 '<div class="countdown-box"><h1>Weeks</h1><span>' + weeks + '</span></div>' +
-                '<div class="countdown-box"><h1>年</h1><span>' + year + '</span></div>' +
-                '<div class="countdown-box"><h1>月</h1><span>' + month + '</span></div>' +
-                '<div class="countdown-box"><h1>日</h1><span>' + strDate + '</span></div>';
+                '<div class="countdown-box"><h1>Years</h1><span>' + year + '</span></div>' +
+                '<div class="countdown-box"><h1>Month</h1><span>' + month + '</span></div>' +
+                '<div class="countdown-box"><h1>Date</h1><span>' + strDate + '</span></div>';
 
             if (distance < 0) {
                 document.getElementById("countdown").innerHTML = '<div class="countdown-box"><h1>已抵达 2024 中考!</h1></div>';
