--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </div>
     </div>
     <div id="countdown" class="countdown-container"></div>
-    <div id="title1" class="countdown-title">
+    <!-- <div id="title1" class="countdown-title">
         <div id="bb" class="countdown-tbox">
             <h1>距离 2024.4.30</h1>
         </div>
     </div>
-    <div id="countdown1" class="countdown-container"></div>
+    <div id="countdown1" class="countdown-container"></div> -->
 
 
     <!-- <div id="title2" class="countdown-title">
